made stuff pretty

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="English">
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="icon" href="">
+    <link rel="icon" href="src\images\branding\Designer (3).png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./src/css/styles.css">
-    <title>Ryan Talbot</title>
+    <title>DayDream</title>
 </head>
 <body>
     <div class="header"><h1>DAYDREAM</h1></div>
@@ -42,7 +42,7 @@
 
     <div id="About" class="subpage active">
         <div class="image-container">
-            <img src="./src/images/Team_USA_pics/flag_flex.jpg" alt="flag_flex.jpg">
+            <img src="src\images\branding\Designer (4).png" alt="Logo 4">
         </div>
     
         <div id="timer">
@@ -66,7 +66,7 @@
         </div>
     
         <div id="image-section">
-            <img id="image" src="" alt="Image description">
+            <img id="image" src="src\images\branding\Designer.png" alt="Logo 0">
         </div>
         <div id="text-section">
             <p id="text"></p>
@@ -127,8 +127,7 @@
                     <p>... just kidding we lost to Iowa</p>
 
                     <blockquote>
-                    <p>"I have to carry the entire team --"</p>
-                    <p>"I can't be expected to drop 30 every game" -Tyson Walker (probably)</p>
+                    <p>"I have to carry the entire team. I can't be expected to drop 30 every game" -Tyson Walker (probably)</p>
                     </blockquote>
 
                 </div>
@@ -138,7 +137,7 @@
         <p>Just kidding hard to have links before stuff is uploaded</p>
         <p>Have another logo as a sample image:</p>
         <div class="image-container">
-            <img src = './src/images/team_usa_logo.png' alt="team usa logo">
+            <img src = 'src\images\branding\Designer (2).png' alt="Logo 2">
         </div>
     </div>
 
@@ -146,8 +145,7 @@
         <h3>Follow along with our journey</h3>
         <div class="footer-links">
             <a href="https://www.instagram.com/" target="_blank"><img src="src/images/Instagram_Logo.jpg" alt="Instagram Logo"></a>
-            <a href="https://msuspartans.com/"><img src = "./src/images/msu_logo.jpg" alt="MSU"></a>
-            <a href="https://worldathletics.org/"><img src = "./src/images/World_Athletics_Logo.jpg" alt="World Athletics"></a>
+            <a href="https://msuspartans.com/"><img src = "./src/images/msu_logo.jpg" alt="MSU Logo"></a>
         </div>
     </div>
 
